--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,26 +1,46 @@
 server:
-  port: 6753  ssl:    key-alias: keystore
-    key-store: classpath:static/ssl/keystore.p12
-    key-store-password: Amar1986#
+  port: 8443
+  ssl:
     enabled: true
+    key-store: ${SSL_KEY_STORE}
+    key-store-password: ${SSL_KEY_STORE_PASSWORD}
+    key-store-type: ${SSL_KEY_STORE_TYPE}
+#    key-alias: ${SSL_KEY_ALIAS}
+#    trust-store: /home/user/cert/client-truststore.jks
+#    trust-store-password: your-truststore-password
+#    trust-store-type: JKS
 
-management:  endpoints:    web:      exposure:        include: "*"
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 
-spring:  datasource:    url: <url oracle>
-    username: <username>
-    password: <password>
-    driver-class-name: <driver class>    hikari:      minimum-idle: 5
-      maximum-pool-size: 20
-      idle-timeout: 50000
-      max-lifetime: 300000
-      connection-timeout: 40000
-  jpa:    show-sql: true
-    hibernate:      ddl-auto: create-drop      use-new-id-generator-mappings: false
+spring:
+  datasource:
+    url: ${POSTGRES_URL}
+    username: ${POSTGRES_USERNAME}
+    password: ${POSTGRES_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+#    hikari:
+#      minimum-idle: 5
+#      maximum-pool-size: 20
+#      idle-timeout: 50000
+#      max-lifetime: 300000
+#      connection-timeout: 100000
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: create-drop
+      use-new-id-generator-mappings: false
     properties:
-      hibernate:        format_sql: true
-    database-platform: org.hibernate.dialect.Oracle12cDialect  mail:    host: smtp.gmail.com
-    username: <email>
-    password: <password email application>
+      hibernate:
+        format_sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+  mail:
+    host: smtp.gmail.com
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
     properties:
       mail:
         smtp:
@@ -35,8 +55,11 @@ Authentication:
 #  user: Admin
 #  password: Admin
   Jwt:
-    secret-key: this is secret key !!!
+    secret-key: ${JWT_SECRET_KEY}
     validity: 3600000
+
+# with ';' delimiter
+Origins: ${ORIGINS}
 
 Rest:
   Admin:
